<resources>
    <string name="app_name">ActFeeds</string>
    <!-- Daily habits list items -->
    <string name="WaterReminder">Drink More Water</string>
    <string name="ExerciseReminder">Exercise</string>
    <string name="FruitsReminder">Eat Fruits</string>
    <string name="ExpressGratitude">Express gratitude</string>
    <string name="LaughLaughAndLaugh">Laugh, laugh and laugh again</string>
    <string name="Read">Read</string>
    <string name="WriteSomething">Write something worth reading</string>
    <string name="WorkOnSecretProject">Work on a secret project</string>
    <string name="Running">Running</string>
    <string name="Meditate">Meditate</string>
    <string name="LearnNewWords">Learn new words</string>
    <string name="EatBowlSalad">Eat a bowl of salad</string>
    <string name="Study">Study</string>
    <string name="CleanTidy">Clean and Tidy up</string>
    <string name="CheckToDo">Check to do list</string>
    <string name="Breakfast">Eat healthy breakfast</string>

    <!--Weekly habits-->
    <string name="Swimming">Swimming</string>
    <string name="Laundry">Laundry</string>
    <string name="CheckBills">Check bills</string>
    <string name="MakeToDo">Make to do list</string>
    <string name="Networking">Networking/Reconnect with friends</string>
    <string name="CareLovedOnes">Do something exciting with loved ones</string>
    <string name="Socialize">Socialize</string>
    <string name="LearnCooking">Learn to cook something new</string>
    <string name="DeclutterPlace">Declutter your place</string>

    <!--Monthly habits-->
    <string name="PlanInvestments">Plan your investments</string>
    <string name="CheckStatement">Check your statement</string>
    <string name="PlanTravel">Plan to travel</string>
    <string name="RearrangeSpace">Rearrange your space</string>
    <string name="PlanOccasions">Plan for occasions in advance</string>


    <!--List of habit's strings -->
    <string name="HeaderDailyActivities">Add Daily Habits</string>
    <string name="WaterReport">Water Report</string>
    <string name="ExerciseReport">Exercise Report</string>
    <string name="FruitsReport">Fruits Report</string>
    <string name="YogaReminder">Yoga Reminder</string>


    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <!--main activity items -->
    <string name="DailyHabits">Daily Habits</string>
    <string name="WeeklyHabits">Weekly Habits</string>
    <string name="MonthlyHabits">Monthly Habits</string>
    <string name="CreateOwn">Create Your Own Activity</string>

    <string name="FeedsPage">Feeds Data</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HabitList">Select an activity</string>

    <!--Goal details-->
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="Repeat">Repeat Daily</string>
    <string name="AddPeople">Add People</string>
    <string name="WakeUpEarly">Wake up early</string>
    <string name="message_token_format" translatable="false">InstanceID Token: %s</string>
    <string name="default_group_size">1</string>
    <string name="default_activity_name">Name</string>
    <string name="Report_Page">No Report generated</string>

    <!-- Settings strings-->
    <string name="LogInLogOut">Login</string>
    <string name="ShareApp">Share the app</string>
    <string name="ContactUs">Contact Support</string>
    <string name="AppTour">App tour</string>
    <string name="Settings">Settings</string>
    <string name="UserProfile">User Profile</string>

    <string name="ContactUSMessage">Write here to send us email. We will reply you within 24 hours."</string>
    <string name="Send">Send</string>
    <string name="getting_started">Getting Started</string>
    <string name="getting_started_text1">To develop new habits!</string>
    <string name="getting_started_text2">To make you fabulous!</string>
    <string name="getting_started_text3">To track your daily progress!</string>
    <string name="buttonToStart">"LET\'S GET STARTED"</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="act_and_progress">Act and Progress</string>
    <string name="skip">Skip</string>
    <string name="o">o</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="settingsHeader">"Hi\, There!"</string>
    <string name="add_button">Add Button</string>
    <string name="title_activity_app_tour">AppTour</string>
    <string name="title_app_tour">App Tour</string>
    <string name="title_edit_activity">Edit Activity</string>
    <string name="add_activity">Add an Activity</string>
    <string name="update">UPDATE</string>
    <string name="save">save</string>
    <string name="subject">Mail from ActZiv</string>
    <string name="email">kavitaagrawal001@gmail.com</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="start_text">No activities added, click on plus button on top to add activities and swipe left to complete.</string>
    <string name="complete_text">Congratulations! You have completed all activities today.</string>
    <string name="empty_actvity_count">No activity progress data, click on plus button on top to add activities</string>
    <string name="my_activities_progress">My Activities Progress</string>
    <string name="today">Today</string>
    <string name="my_daily_progress">My Daily Progress</string>
    <string name="no_daily_progress_data_click_on_plus_button_to_add_activities">No daily progress data, click on plus button to add activities</string>
    <string name="icon_default_text">A</string>
    <string name="item_option">⋮</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="NoActivityCompleted">No Activity Completed</string>
    <string name="NoActivityIncomplete">No Activity Incomplete</string>
    <string name="set_time">Set Time</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="set_priority">Set Priority</string>
    <string name="high">High</string>
    <string name="set_duration">Set Duration</string>
    <string name="mm">MM</string>
    <string name="hh">HH</string>
    <string name="create_your_own_activity">Choose from dropdown or create your own activity</string>


</resources>
