<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:scaleType="centerCrop"
    android:background="@mipmap/ic_aa1front"
    tools:context="com.example.kavitapc.fitnessreminder.OnboardingActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@mipmap/ic_aa1front"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <!-- divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="?attr/actionBarSize"
        android:alpha="0.12"
        android:background="@color/colorAccent"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/intro_btn_skip"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/skip"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/intro_indicator_0"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:background="@drawable/sun"
                android:contentDescription="@string/o" />

            <ImageView
                android:id="@+id/intro_indicator_1"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginHorizontal="3dp"
                android:background="@drawable/circle"
                android:contentDescription="@string/o" />
            <ImageView
                android:id="@+id/intro_indicator_2"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:contentDescription="@string/o"
                android:background="@drawable/circle"
                />

            <!-- Your other 2 indicators here -->

        </LinearLayout>

        <!-- This overlaps the next button in the last slide -->
        <Button
            android:id="@+id/intro_btn_finish"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:text="@string/done"
            android:textColor="@color/colorPrimary"
            android:visibility="gone" />

        <Button
            android:id="@+id/intro_btn_next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:tint="@color/colorPrimary" />

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
