<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kavitapc.fitnessreminder.DailyHabitsDetails">

    <TextView
        android:id="@+id/tvWaterReminder"
        style="@style/TextViewStyle"
        android:layout_marginLeft="16dp"
        android:drawableStart="@mipmap/ic_local_drink_black_24dp"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/WaterReminder"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvExerciseReminder"
        style="@style/TextViewStyle"
        android:drawableStart="@mipmap/ic_fitness_center_black_24dp"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/ExerciseReminder"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvWaterReminder" />

    <TextView
        android:id="@+id/tvFruitsReminder"
        style="@style/TextViewStyle"
        android:drawableStart="@mipmap/ic_restaurant_black_24dp"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/FruitsReminder"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvExerciseReminder"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tvYogaReminder"
        style="@style/TextViewStyle"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@mipmap/ic_accessibility_black_24dp"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/YogaReminder"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFruitsReminder" />

    <CheckBox
        android:id="@+id/cbWaterReminder"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvWaterReminder"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tvWaterReminder"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <CheckBox
        android:id="@+id/cbExerciseReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvExerciseReminder"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/tvExerciseReminder"
        app:layout_constraintRight_toRightOf="parent" />

    <CheckBox
        android:id="@+id/cbFruitsReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvFruitsReminder"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/tvFruitsReminder"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:text="@string/HeaderDailyActivities"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbYogaReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvYogaReminder"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/tvYogaReminder"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/bSave"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="save"

        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
