<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kavitapc.fitnessreminder.AddNewGoals">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvHeaderAddGoals"
            android:layout_width="411dp"
            android:layout_height="52dp"
            android:layout_marginRight="0dp"
            android:background="@color/colorAccentLight"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/AddNewGoals"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="0dp" />

        <TextView
            android:id="@+id/tvDailyHabits"
            style="@style/TextViewStyle"
            android:layout_width="395dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:drawableRight="@android:drawable/ic_input_add"
            android:text="@string/DailyHabits"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="0dp"
            app:layout_constraintHorizontal_bias="1.0" />

        <TextView
            android:id="@+id/tvWeeklyHabits"
            style="@style/TextViewStyle"
            android:layout_width="395dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:drawableRight="@android:drawable/ic_input_add"
            android:text="@string/WeeklyHabits"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDailyHabits"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/tvMonthlyHabits"
            style="@style/TextViewStyle"
            android:layout_width="395dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:drawableRight="@android:drawable/ic_input_add"
            android:text="@string/MonthlyHabits"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWeeklyHabits"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/tvCreateOwn"
            style="@style/TextViewStyle"
            android:layout_width="395dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:drawableRight="@android:drawable/ic_input_add"
            android:text="@string/CreateOwn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMonthlyHabits"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="70dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="151dp"
            tools:layout_editor_absoluteX="0dp" />

    </android.support.constraint.ConstraintLayout>


</FrameLayout>
